chore: font style update

--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@
   --color-divider: #857c6b;
 }
 
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900 */
+
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
+
 html {
   font-size: 62.5%;
   line-height: 1;
