--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
   max-width: 80rem;
   max-height: 10rem;
   padding: 1.4rem;
+  margin-bottom: 1.6em;
   border: 2px solid var(--color-main);
   color: var(--color-main);
   border-radius: 1.4rem;
