--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
 :root {
   --color-main: #cebea4;
   --color-accent: #f43f5e;
+  --color-accent-hover: #e33753;
+  --color-shadow: #f43f5d86;
+  --color-shadow-hover: #f43f5dab;
   --color-background: #0d0d0d;
   --color-outline: #1e1e1e;
   --color-white: #ffffff;
   --color-placeholder: #635c52;
   --color-divider: #857c6b3d;
+  --color-form-input: #27272a;
 }
 
 html {
@@ -32,13 +36,151 @@ body {
   /* height: 100vh; */
 }
 
-/* Header */
+/* Navbar */
+.container {
+  width: 100vw;
+  position: relative;
+}
+
+.nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
+  margin-bottom: 6rem;
+}
+
+.acrud-nav-name {
+  font-family: "Oswald", sans-serif;
+  font-size: 2.4rem;
+  color: var(--color-accent);
+}
+
+.acrud-nav-name span {
+  color: var(--color-main);
+}
+
+.nav-buttons {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.btn {
+  font-size: 1.4rem;
+  font-weight: 600;
+  padding: 1rem 1.8rem;
+  color: var(--color-white);
+  border-radius: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s;
+  box-shadow: 1px 1px 15px var(--color-shadow);
+}
+
+.btn-login {
+  border: 1.6px solid var(--color-accent);
+  background: var(--color-background);
+}
+
+.btn-login:hover {
+  border: 1.6px solid var(--color-accent-hover);
+  box-shadow: 2px 2px 25px var(--color-shadow-hover);
+}
+
+.btn-signup {
+  background: var(--color-accent);
+  border: 1.6px solid var(--color-accent);
+}
+
+.btn-signup:hover {
+  background: var(--color-accent-hover);
+  border: 1.6px solid var(--color-accent-hover);
+  box-shadow: 2px 2px 25px var(--color-shadow-hover);
+}
+
+/* App */
+.container-app {
+  width: 70rem;
+  margin: 0 auto;
+}
+
+.blur {
+  filter: blur(5px) opacity(20%) grayscale(50%);
+}
+
 .header {
   max-width: 75rem;
   padding-bottom: 4rem;
   margin-bottom: 4rem;
-  margin-top: 4rem;
   border-bottom: 0.05px solid var(--color-divider);
+}
+
+/* Popups */
+.popup {
+  width: 40rem;
+  height: auto;
+  background-color: #1e1e1e;
+  padding: 3.6rem;
+  border-radius: 0.8rem;
+}
+
+.popup-signup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.popup-login {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header-account {
+  font-size: 2.8rem;
+  margin-bottom: 3.2rem;
+  color: var(--color-accent);
+}
+
+.form-signup {
+  display: flex;
+  flex-direction: column;
+}
+
+.label-input {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  margin-bottom: 2.8rem;
+}
+
+.label {
+  font-size: 1.3rem;
+}
+
+.input {
+  font-size: 1.4rem;
+  height: 3.6rem;
+  border-radius: 0.8rem;
+  outline: none;
+  border: none;
+  padding: 1rem;
+  background: var(--color-form-input);
+  color: var(--color-white);
+}
+
+.btn-submit {
+  width: 25%;
+  background: var(--color-accent);
+  border: 1.6px solid var(--color-accent);
+}
+
+.btn-submit:hover {
+  background: var(--color-accent-hover);
+  border: 1.6px solid var(--color-accent-hover);
+  box-shadow: 2px 2px 25px var(--color-shadow-hover);
 }
 
 /* Header Box */
@@ -183,4 +325,8 @@ body {
   background: var(--color-outline);
   font-size: 1.4rem;
   font-weight: 600;
+}
+
+.hidden {
+  display: none;
 }
