--- a/style.css
+++ b/style.css
@@ -138,9 +138,21 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.popup-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 3.2rem;
+}
+.close {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: var(--color-accent);
+  cursor: pointer;
+}
+
 .header-account {
   font-size: 2.8rem;
-  margin-bottom: 3.2rem;
   color: var(--color-accent);
 }
 
